get password for current website

--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,9 @@
             <span class="socialBtn" title="LinkedIn" id="linkedinBtn"><i class="fab fa-linkedin"></i></span>
             <span class="socialBtn" title="Github" id="githubBtn"><i class="fab fa-github"></i></span>
         </div>
+        <div id="currentSiteBtn" class="currentSite">
+            <span>Current Website <i class="fas fa-link"></i> </span>
+        </div>
 
         <div class="outputContainer">
             <span id="output"></span>
